viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
/* ... */
#container {
	padding-left: 0px;
	padding-right: 0px;
}

#body {
    padding-top: 0px;
}

body {
    padding-top: 0px;
    margin-bottom: 0px;
}

.navbar.primary ul.dropdown-menu,
.navbar-nav.secondary ul.dropdown-menu,
.navbar-nav.tertiary ul.dropdown-menu {
    max-height: 600px;
    overflow-y: auto;
    overflow-x: hidden;
}

/* emulate .dropdown-menu-right for secondary and tertiary dropdown menus */
.navbar-nav.secondary .dropdown-menu,
.navbar-nav.tertiary .dropdown-menu {
	right: 0;
	left: auto;
}

/* font-size fix for badges inside tables and form-controls */
td .badge,
.scalarPlaceholder .badge,
.form-control-sm .badge {
	font-size:.85rem
}
td .badge span,
.scalarPlaceholder .badge span,
.form-control-sm .badge span {
  padding: 0;
}


.card {
	margin-bottom: 21px;
}
.card .card-header {
	padding: 3px 15px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	min-height: 3em; /* for card-headers that contain no buttons, to make them same height */
}
.card .card-header .card-title {
	margin-bottom: 0rem;
}

.card .mini-card {
  font-size: 0.7rem;
}
.card .mini-card h5 {
  font-size: 0.8rem;
}
.card .mini-card h6 {
  font-size: 0.7rem;
}
.card .mini-card .card-header,
.card .mini-card .card-body,
.card .mini-card .card-footer {
  padding: 0.2rem 0.4rem;
  min-height: inherit;
}

.table .form-control:disabled {
    background-color: transparent;
    border: none;
    text-align: center;
    height: 23px;
    padding: 1px 0;
    cursor: default;
    outline: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.table > thead > tr > th, td {
    text-align: left;
    vertical-align: middle;
}

.navbar {
    border-radius: 0;
    margin-bottom: 0px;
}

a, .btn-link {
	color: var(--link-color);
}
a:focus, a:hover,
.btn-link:focus, .btn-link:hover {
    color: var(--link-color-hover);
}

footer > .navbar {
    z-index: 1;
}

#veil {
    z-index: 40000;
    background-image: none;
    background-color: black;

    display: none;
    position:fixed;
    top:0;
    left:0;
    height: 100%;
    width: 100%;
    opacity: 0.5;
}

#veil .text-center {
    margin-top: 100px;
}

.table .table td {
    border: none;
}

.pagination {
    margin: 0;
}

.fontAwesomeIcon {
	margin-right: 4px;
}

/* from ActionPromptHeaderPanel */

.entityIconAndTitlePanel img {
    width: 24px;
    height: 24px;
}

.entityIconAndTitlePanel span.actionName {
    font-size: 20px;
    font-weight: bolder;
}


/* from SimpleClipboardPanel */

.simpleClipboardPanel form {
    margin: 20px;
    background-color: white;
}

.simpleClipboardPanel div.inner {
    margin: 20px;
    width:640px;
}

.simpleClipboardPanel div.inner p.scalarName {
    padding-top: 40px;
    padding-bottom: 10px;
}

.simpleClipboardPanel form input.textField {
    width:600px;
    margin-bottom: 60px;
}

.simpleClipboardPanel form input.ok {
    margin-bottom: 20px;
}



/* from CollectionContentsAsAjaxTablePanel.css */

.collectionContentsAsAjaxTablePanel table.contents {
    font-size: 0.9em;
    width: 100%;
    border-collapse:collapse;
    margin-top:10px;
}

.collectionContentsAsAjaxTablePanel table.contents caption { text-align: left; }
.collectionContentsAsAjaxTablePanel table.contents tr {
}

.collectionContentsAsAjaxTablePanel table.contents tr th,
.collectionContentsAsAjaxTablePanel table.contents tr th a span {
    text-align: left;
    white-space: nowrap;
    font-weight: bold;
}

.collectionContentsAsAjaxTablePanel table.contents tr th a {
    font-weight: normal;
}
.collectionContentsAsAjaxTablePanel table.contents #message {
    padding-left: 3px;
}
.collectionContentsAsAjaxTablePanel table.contents caption {
    padding-bottom: 2px;
}

.collectionContentsAsAjaxTablePanel table.contents input:disabled {
    background-color: transparent;
    border: none;
}

.collectionContentsAsAjaxTablePanel table.contents .javaMathBigDecimalPanel,
.collectionContentsAsAjaxTablePanel table.contents .javaMathBigIntegerPanel,
.collectionContentsAsAjaxTablePanel table.contents .bytePanel,
.collectionContentsAsAjaxTablePanel table.contents .shortPanel,
.collectionContentsAsAjaxTablePanel table.contents .integerPanel,
.collectionContentsAsAjaxTablePanel table.contents .longPanel,
.collectionContentsAsAjaxTablePanel table.contents .floatPanel,
.collectionContentsAsAjaxTablePanel table.contents .doublePanel {
    text-align: right;
/*    font-family: monospace;*/
}

.collectionContentsAsAjaxTablePanel table.contents .booleanPanel {
    text-align: center;
}

.collectionContentsAsAjaxTablePanel table.contents tr.navigation div.navigatorLabel {
    float: left;
}


.collectionContentsAsAjaxTablePanel table.contents tr.navigation div.navigator {
    float: right;
}

.collectionContentsAsAjaxTablePanel table.contents img {
    width: 16px;
    height: 16px;
}

.collectionContentsAsAjaxTablePanel table.contents tbody .togglebox-column {
    width: 2%;
}
.collectionContentsAsAjaxTablePanel table.contents thead .title-column,
.collectionContentsAsAjaxTablePanel table.contents tbody .title-column {
    text-align: center;
    width: 3%;
}

.collectionContentsAsAjaxTablePanel table.contents a:hover {
    text-decoration:underline;
}

.collectionContentsAsAjaxTablePanel table.contents .entityLinkSelect2Panel .entityImage {
    padding-right:6px;
}

.collectionContentsAsAjaxTablePanel table tfoot {
    margin-top:20px;
}

.collectionContentsAsAjaxTablePanel table tfoot tr td {
    padding:20px 4px 0;
    /*background-color:#FFFFFF !important;*/
}

.collectionContentsAsAjaxTablePanel .entityActions {
    margin-top: -1px;
    margin-bottom: -10px;
    float: left;
    padding:0 0;
}

/* bootstrap seems to set to 'pointer' */
.collectionContentsAsAjaxTablePanel label:hover {
    /*cursor: default;*/
}

.collectionContentsAsAjaxTablePanel div input[type=text][disabled] {
    padding: 0;
}

.collectionContentsAsAjaxTablePanel table tr td:first-child,
.collectionContentsAsAjaxTablePanel table tr th:first-child {
    border-left: none;
}
/* ... */

